Fix page flickering

--- a/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
+++ b/src/components/Book/NewBook/AnimatedPage/AnimatedPage.module.css
@@ -20,7 +20,4 @@
       left: 50%;
     }
   }
-  &.back {
-    z-index: 3;
-  }
 }
